--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "country-state-city": "^3.2.1",
     "firebase": "^10.7.0",
     "framer-motion": "^12.34.0",
     "lucide-react": "^0.564.0",
